--- a/myappp/templates/base.html
+++ b/myappp/templates/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -5,32 +6,42 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Crud django</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
   </head>
   <body>
-    <nav>
-      <ul>
+    <nav class="menu">
+      <ul class="menu_item">
+        
         <li><a href="/">Home</a></li>
        
-      </ul>
-      <ul>
-        <li><a href="/tasks">Tasks</a></li>
-      </ul>
+      </ul >
       
       {%if user.is_authenticated %}
-      <ul>
+      <ul class="menu_item">
+        <li><a href="{% url 'tasks' %}">Tasks Pending</a></li>
+      </ul>
+      <ul class="menu_item">
+        <li><a href="{% url 'task_completed' %}">Task Complete</a></li>
+      </ul>
+      <ul class="menu_item">
+        <li><a href="/tasks/create">Create task</a></li>
+      </ul>
+      <ul class="menu_item">
         <li><a href="/logout">Logout</a></li>
       </ul>
       {% else %}
-      <ul>
+      <ul class="menu_item">
         <li><a href="/signup">Signup</a></li>
       </ul>
-      <ul>
+      <ul class="menu_item">
         <li><a href="/login">Login</a></li>
       </ul>
       {%endif%}
       
     </nav>
 
-    {% block content %} {% endblock %}
+    {% block content %} 
+    {% endblock %}
   </body>
 </html>
