--- a/myappp/templates/created_task.html
+++ b/myappp/templates/created_task.html
@@ -1,15 +1,10 @@
-{% extends "base.html" %}
+{% extends "base.html" %} {% block content %}
+<h1>Create task</h1>
+<form action="/tasks/create" method="POST">
+  {% csrf_token %} 
+   {{error}}
+   {{form}}
 
-{% block content %}
-<h1>Create task </h1>
-<form action="/tasks/create/" method="POST">
-{% csrf_token %}
-
-{{form}}
-
-<button>
-    Save
-</button>
-
+  <button>Save</button>
 </form>
 {% endblock %}
