proteccion de rutas, estilos y despliegue con render.com

--- a/myappp/templates/home.html
+++ b/myappp/templates/home.html
@@ -1,4 +1,20 @@
-{% extends "base.html" %}
-{% block content %}
-<h1>Home</h1>
+{% extends "base.html" %} {% block content %}
+
+<main class="container py-5">
+  <section class="card card-body">
+    <h1 class="display-1">Home</h1>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil quo ipsa
+      quam velit facilis culpa laborum! Deleniti aperiam porro placeat officia
+      distinctio hic. Culpa est delectus ut reiciendis quidem voluptatem quae,
+      in impedit architecto commodi sunt porro animi aut, quisquam beatae eaque,
+      ratione possimus. Quisquam nulla ipsam quasi reprehenderit fugit facere
+      libero soluta. Corrupti quos praesentium dolore omnis molestias delectus!
+    </p>
+    <div text-center><a class="btn btn-primary btn-dark" href="/login">Login
+    </a>
+    <a class="btn btn-primary btn-dark" href="/signup">Signup</a>
+</div>
+  </section>
+</main>
 {% endblock %}
