--- a/myappp/templates/base.html
+++ b/myappp/templates/base.html
@@ -1,4 +1,4 @@
-{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -6,42 +6,60 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Crud django</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT"
+      crossorigin="anonymous"
+    />
+    
   </head>
   <body>
-    <nav class="menu">
-      <ul class="menu_item">
-        
-        <li><a href="/">Home</a></li>
-       
-      </ul >
-      
-      {%if user.is_authenticated %}
-      <ul class="menu_item">
-        <li><a href="{% url 'tasks' %}">Tasks Pending</a></li>
-      </ul>
-      <ul class="menu_item">
-        <li><a href="{% url 'task_completed' %}">Task Complete</a></li>
-      </ul>
-      <ul class="menu_item">
-        <li><a href="/tasks/create">Create task</a></li>
-      </ul>
-      <ul class="menu_item">
-        <li><a href="/logout">Logout</a></li>
-      </ul>
-      {% else %}
-      <ul class="menu_item">
-        <li><a href="/signup">Signup</a></li>
-      </ul>
-      <ul class="menu_item">
-        <li><a href="/login">Login</a></li>
-      </ul>
-      {%endif%}
-      
+    <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+      <div class="container">
+        <a class="navbar-brand" href="/">Tasks</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item"><a class="nav-link"  href="/">Home</a></li>
+            {%if user.is_authenticated %}
+    
+            <li class="nav-item"><a class="nav-link" href="{% url 'tasks' %}">Tasks Pending</a></li>
+    
+            <li class="nav-item"><a class="nav-link"  href="{% url 'task_completed' %}">Task Complete</a></li>
+    
+            <li class="nav-item"><a class="nav-link" href="/tasks/create">Create task</a></li>
+    
+            <li class="nav-item"><a class="nav-link" href="/logout">Logout</a></li>
+    
+            {% else %}
+    
+            <li class="nav-item"><a class="nav-link" href="/signup">Signup</a></li>
+    
+            <li class="nav-item"><a class="nav-link" href="/login">Login</a></li>
+    
+            {%endif%}
+          </ul>
+        </div>
+      </div>
     </nav>
 
-    {% block content %} 
-    {% endblock %}
+    <nav class="menu">
+      <ul class="menu_item">
+       
+      </ul>
+    </nav>
+
+    {% block content %} {% endblock %}
   </body>
 </html>
