--- a/myappp/templates/login.html
+++ b/myappp/templates/login.html
@@ -1,9 +1,35 @@
-{% extends "base.html" %}
-{% block content %}
-    <form action="/login" method="post">
+{% extends "base.html" %} {% block content %}
+<main class="container">
+  <div class="row">
+    <div class="col-md-4 offset-md-4 mt-5">
+      <form action="/login" method="post" class="card card-body">
         {% csrf_token %}
-       <h1>Login</h1>
-       {{form.as_p}}
-       <button>Login</button>
-    </form>
+        <h1 class="text-center">login</h1>
+        {{error}}
+        <div class="mb-3">
+          <label for="username">Username</label>
+          <input
+            type="text"
+            name="username"
+            id="username"
+            class="form-control"
+            placeholder="Write your user"
+          />
+        </div>
+        <div class="mb-3">
+          <label for="password1">Password:</label>
+          <input
+            type="password"
+            name="password"
+            id="password"
+            class="form-control"
+            placeholder="Write your password"
+          />
+        </div>
+
+        <button class="btn btn-primary">Login</button>
+      </form>
+    </div>
+  </div>
+</main>
 {% endblock %}
