--- a/myappp/templates/singup.html
+++ b/myappp/templates/singup.html
@@ -1,10 +1,30 @@
 {% extends "base.html" %}
 {% block content %}
-    <form action="/signup" method="post">
-        {% csrf_token %}
-        <h1>Signup</h1>
-        {{error}}
-        {{form.as_p}}
-        <button>Signup</button>
-    </form>
+    <main class="container">
+        <div class="row">
+            <div class="col-md-4 offset-md-4 mt-5">
+
+                <form action="/signup" method="post" class="card card-body ">
+                    {% csrf_token %}
+                    <h1 class="text-center">Signup</h1>
+                    {{error}}
+                    <div class="mb-3">
+                        <label for="username">Username</label>
+                        <input type="text" name="username" id="username" class="form-control" placeholder="Write your user">
+                    </div>
+                    <div class="mb-3">
+                        <label for="password1">Password:</label>
+                        <input type="password" name="password1" id="password1" class="form-control" placeholder="Write your password">
+                    </div>
+                    <div class="mb-3">
+                        <label for="password2">Confirm password:</label>
+                        <input type="password" name="password2" id="password2" class="form-control" placeholder="Confirm your password">
+                    </div>
+
+                    <button class="btn btn-primary">Signup</button>
+                </form>
+
+            </div>
+        </div>
+    </main>
 {% endblock %}
